--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!doctype html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Messed Up Game</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- IMPORTANT: Vite entry points to /src/main.jsx -->
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
 
