--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Messed Up Game</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: Vite entry points to /src/main.jsx -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
 
