Enhance index.html with SEO meta tags and favicon
Added meta tags for SEO and a favicon link.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Messed Up Game</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<link rel="icon" href="/favicon.ico" />
+<meta name="description" content="The fast, funny party game where your brain has 10 seconds to shine." />
+<meta property="og:title" content="Messed Up Game" />
+<meta property="og:description" content="Are you smarter than them? Play live with Tom B." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.messedupgame.com" />
