--- a/index.html
+++ b/index.html
@@ -1,6 +1,2 @@
-<link rel="icon" href="/favicon.ico" />
-<meta name="description" content="The fast, funny party game where your brain has 10 seconds to shine." />
-<meta property="og:title" content="Messed Up Game" />
-<meta property="og:description" content="Are you smarter than them? Play live with Tom B." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.messedupgame.com" />
+<div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
