--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<link rel="icon" href="/favicon.ico" />
-<meta name="description" content="The fast, funny, 10-second brain game. Are you smarter than them?" />
-<meta property="og:title" content="Messed Up Game" />
-<meta property="og:description" content="Play live with Tom B — lightning-round laughs and bragging rights." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.messedupgame.com" />
+<!doctype html>
+<html>
+  <head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1"/></head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
