--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Messed Up Game — it works!</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<title>Messed Up Game</title>
+<meta name="description" content="Fast, funny, 10-second brain battles.">
 
 
