--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Messed Up Game — it works!</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<title>Messed Up Game</title>
+<meta name="description" content="Fast, funny, 10-second brain battles." />
+<link rel="canonical" href="https://www.messedupgame.com/" />
+
+<!-- Open Graph -->
+<meta property="og:title" content="Messed Up Game" />
+<meta property="og:description" content="Fast, funny, 10-second brain battles." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.messedupgame.com/" />
+<meta property="og:image" content="https://www.messedupgame.com/og-image.jpg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Messed Up Game" />
+<meta name="twitter:description" content="Fast, funny, 10-second brain battles." />
+<meta name="twitter:image" content="https://www.messedupgame.com/og-image.jpg" />
+
+<!-- Optional: nice address bar color on mobile -->
+<meta name="theme-color" content="#111111" />
 
 
