Add HTML structure and meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
-<meta property="og:image" content="/og-image.jpg" />
-<meta name="twitter:image" content="/og-image.jpg" />
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <title>Messed Up Game</title>
+
+    <!-- Social preview image (your JPG in /public) -->
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta name="twitter:image" content="/og-image.jpg" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- Vite dev entry (Vite will replace this with built assets in dist/) -->
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
 
 
 
