--- a/index.html
+++ b/index.html
@@ -1,21 +1,95 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!-- ===== Messed Up Game — Live Signup (Netlify Form) ===== -->
+<section class="mug-wrap">
+  <div class="mug-card">
+    <h1>Play Live with Wildman Tom B</h1>
+    <p class="sub">First <strong>5</strong> people to sign up will play!<br>
+      <strong>Winner moves to next round!</strong>
+    </p>
 
-    <title>Messed Up Game</title>
+    <form name="live-signup"
+          method="POST"
+          action="/thanks.html"
+          data-netlify="true"
+          data-netlify-honeypot="bot-field">
+      <!-- Netlify form name -->
+      <input type="hidden" name="form-name" value="live-signup">
+      <!-- optional subject if you route form emails -->
+      <input type="hidden" name="subject" value="New Live Show Signup - Messed Up Game">
 
-    <!-- Social preview image (your JPG in /public) -->
-    <meta property="og:image" content="/og-image.jpg" />
-    <meta name="twitter:image" content="/og-image.jpg" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <!-- Vite dev entry (Vite will replace this with built assets in dist/) -->
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+      <!-- SPAM trap -->
+      <p class="hidden">
+        <label>Don’t fill this out: <input name="bot-field"></label>
+      </p>
+
+      <label>
+        Full name*
+        <input type="text" name="name" required>
+      </label>
+
+      <label>
+        Email*
+        <input type="email" name="email" required>
+      </label>
+
+      <label>
+        Mobile (for show-time text, optional)
+        <input type="tel" name="phone" placeholder="(###) ###-####">
+      </label>
+
+      <label>
+        Preferred play time (select all that work)
+        <select name="time" required>
+          <option value="" disabled selected>Select a time</option>
+          <option>Weeknights 6–8pm</option>
+          <option>Weeknights 8–10pm</option>
+          <option>Saturday afternoon</option>
+          <option>Sunday evening</option>
+        </select>
+      </label>
+
+      <label>
+        Why do you want in? (optional)
+        <textarea name="note" rows="3" placeholder="Tell Wildman Tom B why you should be picked!"></textarea>
+      </label>
+
+      <label class="check">
+        <input type="checkbox" name="consent" required>
+        I agree to the show rules (Three strikes = out) and understand only 5 players play each show.
+      </label>
+
+      <button type="submit">Get on the Live Player List</button>
+
+      <p class="fine">
+        You’ll get a confirmation email if you’re in the first 5 for the next show.
+        All live players receive a FREE signed Messed Up Game deck ($14.95 value).
+      </p>
+    </form>
+  </div>
+</section>
+
+<!-- Minimal styles (feel free to move to your CSS file) -->
+<style>
+  :root { --bg:#0b0b0c; --card:#ffffff; --ink:#1b1b1f; --accent:#ffd100; --soft:#f4f4f6; }
+  .mug-wrap { min-height: 100vh; display:flex; align-items:center; justify-content:center;
+              background: radial-gradient(70% 70% at 30% 30%, #ffede0 0%, #fff 50%, #f6f7fb 100%); padding: 40px 16px; }
+  .mug-card { width: min(780px, 100%); background: var(--card); color: var(--ink);
+              border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,.08); padding: 28px; }
+  h1 { margin: 0 0 8px; font: 800 34px/1.1 system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif; }
+  .sub { margin: 0 0 18px; font: 600 18px/1.4 system-ui; }
+  form { display:grid; gap:14px; }
+  label { display:grid; gap:8px; font: 600 14px/1.2 system-ui; }
+  input, select, textarea { border:1px solid #dfe3ea; border-radius:12px; padding:14px 14px;
+                            font: 500 16px/1.3 system-ui; background:#fff; color:var(--ink); }
+  input:focus, select:focus, textarea:focus { outline:2px solid var(--accent); border-color: var(--accent); }
+  .check { display:flex; align-items:center; gap:10px; font-weight:600; }
+  .check input { width:18px; height:18px; }
+  button { margin-top:6px; border:0; border-radius:14px; padding:14px 18px;
+           background: var(--ink); color:#fff; font: 800 16px/1 system-ui; cursor:pointer; }
+  button:hover { filter: brightness(1.05); }
+  .fine { color:#4a4f58; font: 500 12px/1.4 system-ui; margin: 4px 2px 0; }
+  .hidden { display:none; }
+</style>
+
 
 
 
