Add AdSense script to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- AdSense global tag -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1002132494100386" crossorigin="anonymous"></script>
+
     <title>Messed Up Game</title>
     <!-- Social preview image (place og-image.jpg in /public) -->
     <meta property="og:image" content="/og-image.jpg" />
@@ -14,3 +18,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
