--- a/public/newsletter/index.html
+++ b/public/newsletter/index.html
@@ -61,13 +61,18 @@
   <aside class="rail">
     <div class="card">
       <div class="label">Advertisement</div>
-      <ins class="adsbygoogle" style="display:block;min-height:250px"
-           data-ad-client="ca-pub-XXXXXXXXXXXXXXX"      <!-- your pub ID -->
-           data-ad-slot="1234567890"                    <!-- right-rail slot ID -->
-           data-ad-format="auto"
-           data-full-width-responsive="true"
-           data-adtest="on"></ins>
-      <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
+
+      <a href="https://joyfuldoglover.com" target="_blank" rel="noopener noreferrer">
+        <img
+          src="/joyful-dog-lover-mup.png"
+          alt="Joyful Dog Lover - Proud sponsor of the Messed Up Game"
+          style="max-width:100%;height:auto;border-radius:8px;display:block;margin:4px auto 8px;border:0;"
+        />
+      </a>
+
+      <div style="font-size:13px;opacity:.85;text-align:center;">
+        Proud sponsor: <strong>Joyful Dog Lover</strong> – accessories, clothing, toys, food, etc.
+      </div>
     </div>
 
     <a class="cta" href="https://streamyard.com/6u894xi3cw" target="_blank" rel="noopener">
@@ -86,3 +91,4 @@
 
 </body>
 </html>
+
