--- a/public/newsletter/index.html
+++ b/public/newsletter/index.html
@@ -34,17 +34,23 @@
       <div style="opacity:.85;margin-bottom:10px">By Wildman Tom B</div>
       <p>Nine players. Three strikes. One champion. Last night’s Messed Up Game brought heat from the first category.</p>
 
-      <!-- In-article ad (mobile MVP) -->
+            <!-- In-article sponsor -->
       <div style="margin:14px 0">
-        <div class="label" style="color:#fff">Advertisement</div>
-        <ins class="adsbygoogle" style="display:block;min-height:120px"
-             data-ad-client="ca-pub-XXXXXXXXXXXXXXX"      <!-- your pub ID -->
-             data-ad-slot="0987654321"                    <!-- in-article slot ID -->
-             data-ad-format="auto"
-             data-full-width-responsive="true"
-             data-adtest="on"></ins>                      <!-- keep ON until you’re ready to earn -->
-        <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
+        <div class="label" style="color:#fff">Sponsor</div>
+
+        <a href="https://joyfuldoglover.com" target="_blank" rel="noopener noreferrer">
+          <img
+            src="/joyful-dog-lover-mup.png"
+            alt="Joyful Dog Lover - Proud sponsor of the Messed Up Game"
+            style="width:100%;height:auto;border-radius:12px;display:block;margin:8px auto;border:0;"
+          />
+        </a>
+
+        <p style="font-size:14px;opacity:.9;text-align:center;margin-top:6px;">
+          Proud partner: <strong>Joyful Dog Lover</strong> — accessories, clothing, toys &amp; food for your pups.
+        </p>
       </div>
+
 
       <p>The turning point came in “Fast Food Restaurants” when two quick strikes flipped momentum.</p>
       <p>We’re live again at 10:00 AM PT — first 9 get on camera. <a href="https://streamyard.com/6u894xi3cw" target="_blank" rel="noopener">Join here</a> or <a href="https://messedupgame.com" target="_blank" rel="noopener">sign up free</a>.</p>
