--- a/public/newsletter/index.html
+++ b/public/newsletter/index.html
@@ -34,7 +34,7 @@
       <div style="opacity:.85;margin-bottom:10px">By Wildman Tom B</div>
       <p>Nine players. Three strikes. One champion. Last night’s Messed Up Game brought heat from the first category.</p>
 
-            <!-- In-article sponsor -->
+      <!-- In-article sponsor -->
       <div style="margin:14px 0">
         <div class="label" style="color:#fff">Sponsor</div>
 
@@ -51,7 +51,6 @@
         </p>
       </div>
 
-
       <p>The turning point came in “Fast Food Restaurants” when two quick strikes flipped momentum.</p>
       <p>We’re live again at 10:00 AM PT — first 9 get on camera. <a href="https://streamyard.com/6u894xi3cw" target="_blank" rel="noopener">Join here</a> or <a href="https://messedupgame.com" target="_blank" rel="noopener">sign up free</a>.</p>
     </article>
@@ -65,6 +64,7 @@
 
   <!-- RIGHT: ads + promo -->
   <aside class="rail">
+    <!-- Joyful Dog Lover sponsor -->
     <div class="card">
       <div class="label">Advertisement</div>
 
@@ -81,6 +81,25 @@
       </div>
     </div>
 
+    <!-- MOSH featured product -->
+    <div class="card">
+      <div class="label">Featured Product</div>
+
+      <a href="https://moshlife.com" target="_blank" rel="noopener noreferrer">
+        <img
+          src="/mosh-brain-bar.png"
+          alt="MOSH Brain Bars – Fuel Your Mind"
+          style="max-width:100%;height:auto;border-radius:8px;display:block;margin:4px auto 8px;border:0;"
+        />
+      </a>
+
+      <div style="font-size:13px;opacity:.85;text-align:center;">
+        Wildman recommended: <strong>MOSH Brain Bars</strong><br>
+        Brain fuel. Clean energy. Great taste.
+      </div>
+    </div>
+
+    <!-- CTA to join the game -->
     <a class="cta" href="https://streamyard.com/6u894xi3cw" target="_blank" rel="noopener">
       <strong>Join Live on StreamYard</strong>
       <div style="font-size:14px;opacity:.8;margin-top:6px">First 9 players get in — camera &amp; mic on.</div>
@@ -97,4 +116,3 @@
 
 </body>
 </html>
-
