--- a/public/newsletter/index.html
+++ b/public/newsletter/index.html
@@ -93,10 +93,11 @@
         />
       </a>
 
-      <div style="font-size:13px;opacity:.85;text-align:center;">
+            <div style="font-size:13px;opacity:.95;text-align:center;color:#b388ff;">
         Wildman recommended: <strong>MOSH Brain Bars</strong><br>
         Brain fuel. Clean energy. Great taste.
       </div>
+
     </div>
 
     <!-- CTA to join the game -->
