--- a/public/newsletter/index.html
+++ b/public/newsletter/index.html
@@ -81,24 +81,35 @@
       </div>
     </div>
 
-    <!-- MOSH featured product -->
+        <!-- MOSH featured product -->
     <div class="card">
       <div class="label">Featured Product</div>
 
       <a href="https://moshlife.com" target="_blank" rel="noopener noreferrer">
         <img
-          src="/mosh-brain-bar.png"
-          alt="MOSH Brain Bars – Fuel Your Mind"
+          src="/mosh-logo.png"
+          alt="MOSH Brain + Body Fuel"
           style="max-width:100%;height:auto;border-radius:8px;display:block;margin:4px auto 8px;border:0;"
         />
       </a>
 
-            <div style="font-size:13px;opacity:.95;text-align:center;color:#b388ff;">
-        Wildman recommended: <strong>MOSH Brain Bars</strong><br>
+      <div style="font-size:13px;opacity:.95;text-align:center;">
+        Wildman recommended:
+        <span style="color:#b388ff;font-weight:700;">
+          MOSH Brain Bars – Fuel Your Mind
+        </span><br>
         Brain fuel. Clean energy. Great taste.
       </div>
-
     </div>
+
+      <div style="font-size:13px;opacity:.95;text-align:center;">
+    Wildman recommended:
+    <span style="color:#b388ff;font-weight:700;">
+      MOSH Brain Bars – Fuel Your Mind
+    </span><br>
+    Brain fuel. Clean energy. Great taste.
+  </div>
+
 
     <!-- CTA to join the game -->
     <a class="cta" href="https://streamyard.com/6u894xi3cw" target="_blank" rel="noopener">
