--- a/public/newsletter/index.html
+++ b/public/newsletter/index.html
@@ -94,13 +94,17 @@
       </a>
 
       <div style="font-size:13px;opacity:.95;text-align:center;">
+        <span style="color:#4D2C91;font-weight:700;">
+          MOSH Brain + Body Fuel
+        </span><br>
         Wildman recommended:
-        <span style="color:#b388ff;font-weight:700;">
+        <span style="color:#4D2C91;font-weight:700;">
           MOSH Brain Bars – Fuel Your Mind
         </span><br>
         Brain fuel. Clean energy. Great taste.
       </div>
     </div>
+
 
       <div style="font-size:13px;opacity:.95;text-align:center;">
     Wildman recommended:
